fix sidebar collapse menu

--- a/public/css/common.css
+++ b/public/css/common.css
@@ -309,3 +309,10 @@ table.dataTable thead .sorting:after {
 .show-grid {
     margin: 15px 0;
 }
+
+/* Extra */
+[ng-click],
+[data-ng-click],
+[x-ng-click] {
+    cursor: pointer;
+}
